[package]
name = "bitcoin_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "./src/bin/app.rs"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-macros = "0.4.1"
anyhow = "1.0.81"
chrono = { version = "0.4.34", default-features = false, features = [
    "clock",
    "serde",
] }
config = { version = "0.14.0" }
fake = { version = "2.9.2", features = ["derive", "uuid", "chrono"] }
futures = "0.3.30"
garde = { version = "0.18.0", features = ["full"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "0.12.15", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.197", features = ["derive"] }

log = "0.4.21"
log-derive = "0.4.1"
once_cell = "1.19.0"
strum = { version = "0.26.2", features = ["derive"] }
test-context = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
thiserror = "1.0.58"
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
async-std = "1.12.0"
rust_decimal = "1.34.3"
serde_json = "1.0.114"
bitcoincore-rpc = "0.18.0"
